# nmdc-mixs-supplement-for-envo

./: Makefile  README.md  exhaustive_subclasses.sparql  mixs_cols_translations.txt  nmsfe_static.ttl  pyproject.toml  ubergraph_biome_SC_construct.sparql  ubergraph_biome_label_construct.sparql  ubergraph_env_mat_SC_construct.sparql
nmdc-mixs-supplement-for-envo/: classes-by-grid-expansion.py
