[tool.poetry]
name = "nmdc-mixs-supplement-for-envo"
version = "0.1.0"
description = "A central, curatable OWL document for associating EnvO terms with MIxS fields. Imports and acts as an overlay on EnvO."
authors = ["Mark Andrew Miller <MAM@lbl.gov>"]
license = "CC0"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
linkml = "^1.3.0"
black = "^22.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
